# Linux_build

./: .gitignore  BrickConfig.h.in  Build.bat  CMakeLists.txt  Licence.txt  ReadMe.txt  build.sh  clr.bat  clr.sh  configure.bat  configure.sh
Assets/shaders/: fragmentShader.glsl  particleFS.glsl  particleVS.glsl  text_2d_fs.glsl  text_2d_vs.glsl  vertexShader.glsl
Linking/include/glad/: glad.h
Linking/lib/: glad.c
src/: Game.cpp  Game.h  main.cpp
src/audio/: MusicBuffer.cpp  MusicBuffer.h  SoundBuffer.cpp  SoundBuffer.h  SoundDevice.cpp  SoundDevice.h  SoundSource.cpp  SoundSource.h
src/graphics/: Direction.hpp  ResourceManager.cpp  ResourceManager.h  SpriteRenderer.cpp  SpriteRenderer.h
src/graphics/Effects/: Cracks.cpp  Cracks.h  Particle.cpp  Particle.h
src/graphics/Level/: GameLevel.cpp  GameLevel.h
src/graphics/Text/: TextRenderer.cpp  TextRenderer.h
src/graphics/algorithms/: CellData.cpp  CellData.h  indicesGenerator.cpp  indicesGenerator.h
src/graphics/models/: Character.cpp  Character.h  GameObject.cpp  GameObject.h  WaterObject.h
src/graphics/rendering/: Shader.cpp  Shader.h  Texture.cpp  Texture.h
